# poetry-to-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE.md  README.md  data.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml  renovate.json5
.github/workflows/: ci.yml  pr-labels.yml  release.yml
htmlcov/: class_index.html  d_e1d39f5ead57ff2c___init___py.html  d_e1d39f5ead57ff2c_common_py.html  d_e1d39f5ead57ff2c_sync_hooks_additional_dependencies_py.html  d_e1d39f5ead57ff2c_sync_repos_py.html  function_index.html  index.html  status.json  z_e1d39f5ead57ff2c___init___py.html  z_e1d39f5ead57ff2c_common_py.html  z_e1d39f5ead57ff2c_sync_hooks_additional_dependencies_py.html  z_e1d39f5ead57ff2c_sync_repos_py.html
poetry_to_pre_commit/: __init__.py  common.py  sync_hooks_additional_dependencies.py  sync_repos.py
tests/: conftest.py  pyproject.toml  test_common.py  test_sync_hooks_additional_dependencies.py  test_sync_repos.py
