[tool.poetry]
name = "fake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "*"

[tool.poetry.group.dev.dependencies]
pyright = "*"
pylint = "*"
flake8 = "*"

[tool.poetry.group.types.dependencies]
types-requests = "*"
psycopg = { version = "^3", extras = ["pool"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
